Fix credit overlapping
Temporary fix

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ code {
   width: 100%;
   height: 50px;
   bottom: 0;
-  margin: 20px 0;
+  margin: 60px 0 20px 0;
   opacity: .5;
   text-align: center;
 }
